welcome.lessons.welcome.variables.Variables.scala.error
Variables:3: error: not found: value avancer
 avancer(nbPas);
 ^Variables:6: error: not found: value reculer
 reculer(nbPas);
 ^