welcome.lessons.welcome.variables.Variables.scala.code
var nbPas:Int = 0;
 avancer(nbPas);

 prendBiscuit();
 reculer(nbPas);
 poseBiscuit();
  nbPas = nbPas + 1;